# Atoms

./: .gitignore  CMakeLists.txt  README.md
AtomMetal/: Info.plist  README.md
AtomMetal/Shaders/: ChargeShaders.metal  GridShaders.metal  HUDShaders.metal  RaytracerShaders.metal  ShaderTypes.h
AtomMetal/Source/: AppDelegate.mm  MetalView.mm  Renderer.h  Renderer.mm  main.mm
AtomMetal/Source/HUD/: HUDRenderer.mm
AtomMetal/Source/Physics/: CDFSampler.h  ProbabilityCurrent.h  WaveFunction.cpp
AtomMetal/Source/Scene/: ParticleSystem.h  ParticleSystem.mm  PointCharge.h
Shaders/: OrbitalShaders.metal
Source/: MetalView.h  MetalView.mm  SimdMath.h
Source/HUD/: HUDRenderer.h
Source/Physics/: CDFSampler.cpp  ProbabilityCurrent.cpp  WaveFunction.h
Source/Scene/: Grid.h  Grid.mm  PointCharge.mm
shaders/: quad_2d.metal  raytracer.metal  realtime.metal
src/: atom.cpp  atom_raytracer.cpp  atom_realtime.cpp  metal_bridge.mm  metal_test.cpp  wave_atom_2d.cpp
